update layout of detail pages
